--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -22,43 +22,21 @@
 // 5. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 
+@import "./layouts/header";
+@import "./components/_sidebar";
+@import "./components/_top-menu";
+
 // 6. Add additional custom code here
 
 body {
     font-family: 'Open Sans', sans-serif;
 }
 .container-fluid {
- padding: 0 50px;
-}
-
-.dropdown-menu {
-    min-width: 12rem;
-    max-width: 250px;
-}
-
-.dropdown:hover .dropdown-menu {
-    display: block;
-    margin-top: 0; // remove the gap so it doesn't close
- }
-
- .nav-link {
-    display: block;
-    padding: 0.5rem 1rem;
-    color: black;
-    text-decoration: none;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
-}
-
-.nav-link:hover, .nav-link:focus {
-    color: black;
+ padding: 24px 50px;
 }
 
 a {
     color: black;
-    text-decoration: underline;
+    text-decoration: none; 
 }
 
-.social-links > a {
-    padding-right: 5px;
-    font-size: 16px;
-}
