--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -22,17 +22,21 @@
 // 5. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 
-@import "./layouts/header";
-@import "./components/_sidebar";
-@import "./components/_top-menu";
+@import "./layouts/presentation";
+@import "./components/sidebar";
+@import "./components/header";
+@import "./components/navbar";
 
 // 6. Add additional custom code here
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    background-color: #F9F9F9;
+    position: relative;
 }
+
 .container-fluid {
- padding: 24px 50px;
+ padding: 14px 70px;
 }
 
 a {
