--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,24 +1,46 @@
 #header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #48AAFC;
-    align-items: center;
+    background-color: #031721;
+    color: whitesmoke;
+    svg {
+        color: whitesmoke;
+    }
+    a {
+        padding-right: 8px;
+        color: whitesmoke;
+    }
 }
 
-.shortcuts > a {
-    padding-right: 8px;
+.shortcuts {
+    .dropdown-menu {
+        border: none;
+        background-color: transparent;
+        z-index: 2;
+        text-align: center;
+        padding-top: 0;
+        box-shadow: none;
+        padding-right: 2px;
+    }
+    .dropdown-item{
+        padding: 0;
+        font-size: 10px;
+    }
+    .dropdown-item:hover {
+        background-color: transparent;
+    }
+    .nav-link {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    p {
+        font-size: 10px;
+        margin-bottom: 0;
+    }
 }
 
 #icons {
-    display: flex;
-    justify-content: space-between;
-    gap: 32px;
+    text-align: end;
+    font-size: 14px;
 }
-
-// .social-links > a {
-//     padding-right: 8px;
-//     font-size: 16px;
-// }
 
 #search {
     margin-right: 8px;
