--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -10,12 +10,13 @@
 
 .dropdown-menu {
     min-width: 12rem;
-    max-width: 250px;
     box-shadow: 0 0 15px rgb(0 0 0 / 20%);
     border: none;
     font-weight: 100;
     font-size: 13px;
     font-weight: 300;
+    background-color: #48AAFC;
+    padding-right: 2px;
     left: -60px;
 }
 
