--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -23,6 +23,7 @@
 @import "../node_modules/bootstrap/scss/utilities/api";
 
 @import "./layouts/presentation";
+@import "./layouts/footer";
 @import "./components/sidebar";
 @import "./components/header";
 @import "./components/navbar";
@@ -32,7 +33,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #F9F9F9;
-    position: relative;
 }
 
 .container-fluid {
