--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 #header {
-    background-color: #031721;
+    background-color: #83DFFF;
     color: whitesmoke;
     svg {
         color: whitesmoke;
@@ -18,7 +18,6 @@
         text-align: center;
         padding-top: 0;
         box-shadow: none;
-        padding-right: 2px;
     }
     .dropdown-item{
         padding: 0;
@@ -45,3 +44,65 @@
 #search {
     margin-right: 8px;
 }
+
+.list {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.modal {
+    background: black;
+    top: 61px;
+}
+
+#menu > ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: end;
+    gap: 24px;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #031721;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateY(-100%);
+    transition: all 0.5s;
+    padding: 100px 0;
+    z-index: -1;
+    ul {
+        list-style-type: none;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+
+  .overlay.show {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+
+//   .overlay #closeNav {
+//     position: absolute;
+//     top: 20px;
+//     right: 45px;
+//     font-size: 60px;
+//   }
+
+  .btn-overlay:hover{
+    border-bottom: 1px solid #FBC558;
+    padding-bottom: 5px;
+  }
+
+  .btn-overlay.active {
+    border: 1px solid #FBC558;
+    padding: 5px;
+  }
+  
