--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -18,6 +18,9 @@
 @import "../node_modules/bootstrap/scss/helpers";
 @import "../node_modules/bootstrap/scss/nav";
 @import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/modal";
 
 // 5. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
@@ -36,11 +39,15 @@ body {
 }
 
 .container-fluid {
- padding: 14px 70px;
+ padding: 20px 150px;
 }
 
 a {
     color: black;
     text-decoration: none; 
 }
+
+// .container {
+//    padding: 20px 100px;
+// }
 
