--- a/sass/layouts/_presentation.scss
+++ b/sass/layouts/_presentation.scss
@@ -1,32 +1,37 @@
-.image  {
-    position: relative;
-    
-    img {
-        width: 100%;
-        border-radius: 5px;
-    }
+#presentation {
+    background-color: #48AAFC;
+    padding-top: 180px;
 }
 
 .title {
-    z-index: 2;
-    line-height: 2px;
-    color: #f6c85c;
+    display: flex;
+    flex-direction: column;
+    color: whitesmoke;
+    margin-bottom: 50px;
+}
+
+#festival-dates {
+    align-self: flex-end;
+}
+
+.separateur {
+    width: 100%;
+    height: 1px;
+    background: whitesmoke;
+    margin: 8px 0;
+}
+
+.image {
+    width: 100%;
+    height: 600px;
+    background: grey;
+    position: relative;
+}
+
+.title-edition {
+    position: absolute;
+    top: 93px;
+    left: -44px;
+    font-size: 70px;
     text-transform: uppercase;
-    letter-spacing: -5px;
-
-    h1 {
-        font-size: 80px;
-        margin: 0;
-    }
-
-    p {
-        font-size: 40px;
-        font-weight: 300;
-    }
-
-    span {
-        font-size: 40px;
-        font-weight: 300; 
-    }
-    
 }
