--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -1,18 +1,19 @@
 .overlay {
     position: fixed;
     height: 100%;
-    width: 100%;
+    width: 75%;
     top: 0;
     left: 0;
     background-color: #031721;
     overflow-y: auto;
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     transition: all 0.5s;
     z-index: -1;
+    opacity: 75%;
 }
 
 .overlay.show {
-    transform: translateY(0%);
+    transform: translateX(0%);
     // transition: all 0.5s;
 }
 
@@ -22,8 +23,8 @@
     margin-top: 64px;
     text-transform: uppercase;
     font-size: 32px;
-    text-align: center;
-    line-height: 58px;
+    line-height: 54px;
+    padding-left: 0;
 }
 
 #nav-secondaire li.souspage {
@@ -34,4 +35,13 @@
 
 #closeBtn {
     display: none;
+}
+
+.not-overlay {
+    position: fixed;
+    height: 100%;
+    width: 25%;
+    top: 0;
+    right: 0;
+    background-color: transparent;
 }
