--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -1,6 +1,6 @@
 .overlay {
     position: fixed;
-    height: 100%;
+    height: 100vh;
     width: 75%;
     top: 0;
     left: 0;
@@ -9,7 +9,7 @@
     transform: translateX(-100%);
     transition: all 0.5s;
     z-index: -1;
-    opacity: 75%;
+    opacity: 80%;
 }
 
 .overlay.show {
@@ -21,16 +21,16 @@
     display: none;
     list-style-type: none;
     margin-top: 64px;
-    text-transform: uppercase;
-    font-size: 32px;
-    line-height: 54px;
-    padding-left: 0;
+    font-size: 22px;
+    line-height: 40px;
 }
 
-#nav-secondaire li.souspage {
+#nav-secondaire .sousliste {
+    margin-top: 0;
     padding-left: 24px;
     font-size: 18px;
     line-height: 24px;
+    display: none;
 }
 
 #closeBtn {
@@ -39,9 +39,12 @@
 
 .not-overlay {
     position: fixed;
-    height: 100%;
+    height: 100vh;
     width: 25%;
     top: 0;
     right: 0;
-    background-color: transparent;
+    cursor: pointer;
+    display: none;
+    opacity: 0;
+    background: rgba(0,0,0,0.5);
 }
