--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,57 +10,18 @@
     }
 }
 
-.shortcuts {
-    .dropdown-menu {
-        border: none;
-        background-color: transparent;
-        z-index: 2;
-        text-align: center;
-        padding-top: 0;
-        box-shadow: none;
-    }
-    .dropdown-item{
-        padding: 0;
-        font-size: 10px;
-    }
-    .dropdown-item:hover {
-        background-color: transparent;
-    }
-    .nav-link {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    p {
-        font-size: 10px;
-        margin-bottom: 0;
-    }
-}
-
-#icons {
-    text-align: end;
-    font-size: 14px;
-}
-
-#search {
-    margin-right: 8px;
-}
-
-.list {
-    list-style-type: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-#nav-principal {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+// #nav-principal {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: baseline;
+// }
 
 #shortcuts {
     list-style-type: none;
     display: flex;
     gap: 24px;
+    align-items: center;
+    justify-content: end;
 }
 
 .fa-magnifying-glass {
@@ -68,36 +29,40 @@
 }
 
 #nav-elements {
-    list-style-type: none;
     display: flex;
-    border: 1px solid;
-    padding: 16px;
-    border-radius: 28px;
+    gap: 28px;
+    justify-content: end;
+    // border: 1px solid;
+    // padding: 16px;
+    // border-radius: 28px;
     
     a:hover {
-        background-color: #F5C555;
-        padding: 14px 10px;
-        border-radius: 20px;
+        // background-color: #F5C555;
+        // padding: 14px 10px;
+        // border-radius: 20px;
+        border-bottom: 1px solid;
     }
 
     a {
         background-color: transparent;
-        padding: 14px 10px; 
+        // padding: 14px 10px; 
+        padding-bottom: 8px;
     }
     
     a.active {
-        background-color: #F5C555;
-        padding: 14px 10px;
-        border-radius: 20px;
+        // background-color: #F5C555;
+        // padding: 14px 10px;
+        // border-radius: 20px;
+        border-bottom: 1px solid #F5C555;
     }
 }
 
 
-// #account {
-//     border: 1px solid;
-//     padding: 16px;
-//     border-radius: 28px;
-// }
+#account {
+    padding: 8px;
+    border-radius: 25px;
+    background-color: #F5C555;
+}
 
 // #shortcuts {
 //     display: flex;
