--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -7,6 +7,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // z-index: -1;
+
     .social-links {
         display: flex;
         flex-direction: column;
@@ -15,6 +17,10 @@
 
         a {
             color: #002E4D;
+        }
+
+        a:hover {
+            color: yellow;
         }
     }
 }
