--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -44,11 +44,15 @@ body {
 }
 
 a {
-    color: black;
     text-decoration: none; 
+    color: black;
 }
 
 .container {
-   padding: 32px 0;
+   padding: 24px 0;
+}
+
+ul {
+    list-style-type: none;
 }
 
